--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+# Turn off the Spring Boot Banner
+spring.main.banner-mode=off
+# reduce logging level. set logging level to warn
+logging.level.root=warn
+# Add logging configs to display SQL Statements
+logging.level.org.hibernate.SQL=debug;
+logging.level.org.hibernate.orm.jdbc.bind=trace
+# Configure JPA/Hibernate to auto create the tables
+spring.jpa.hibernate.ddl-auto=create
+
